Update: make get_search_book array
